--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.2.3",
     "core-js": "^3.6.5",
+    "portal-vue": "^2.1.7",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
