--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint --fix && stylelint ./src/**/*.{vue,css} --fix"
+    "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.0.2",
